# tiralabra-harjoitustyo

./: .coverage  README.md  pyproject.toml
docs/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
docs/viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: canvas.py  main.py  network.py  train_network.py
src/tests/: .coverage  network_test.py
