[tool.poetry]
name = "tiralabra-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["joni ursin <joni.ursin@gmail.com>"]
readme = "README.md"
packages = [{include = "tiralabra_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
