[tool.poetry]
name = "tiralabra-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["joni ursin <joni.ursin@gmail.com>"]
readme = "README.md"
packages = [{include = "tiralabra_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
