[tool.poetry]
name = "tiralabra-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["joni ursin <joni.ursin@gmail.com>"]
readme = "README.md"
packages = [{include = "tiralabra_harjoitustyo"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "*"
idx2numpy = "^1.2.3"
tk = "^0.1.0"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
pytest = "^8.3.3"
pylint = "^3.3.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
